--- a/templates/claim/banner.html.twig
+++ b/templates/claim/banner.html.twig
@@ -1,5 +1,7 @@
 <!-- DEBUT Driver Controller TEMPLATES banner -->
-<section class="claim--banner" id="banner" style="background-image:url({{ asset(sImgPath ~'banner/Request.jpg') }});">
+<section class="claim--banner" id="banner"
+    style="background-image:url({{ asset(sImgPath ~'banner/Request.jpg') }});"
+>
     <H1>PROGRAMMER UNE COURSE</H1>
     
 </section>
