--- a/templates/driver/banner.html.twig
+++ b/templates/driver/banner.html.twig
@@ -9,10 +9,10 @@
     
     <!-- internal page menu, to navigate to ID -->
     <!-- <div id="nav--inpage">
-        <a href="#section--services">A votre service</a>
-        <a href="#section--pro">Professionnalisme</a>
-        <a href="#section--equipments">Les équipements passager</a>
-        <a href="#section--bikes">Les motos</a>
+        <a href="#">A votre service</a>
+        <a href="#">Professionnalisme</a>
+        <a href="#">Les équipements passager</a>
+        <a href="#">Les motos</a>
     </div> -->
     
 </section>
