--- a/templates/profile/changepwd.html.twig
+++ b/templates/profile/changepwd.html.twig
@@ -6,7 +6,7 @@
 
     {{ include('profile/banner.html.twig') }}
 	
-    <form class="modal--big container-fluid mt-5 pt-5" method="post" enctype="multipart/form-data">
+    <form class="container-fluid modal--big mt-5 pt-5" method="post" enctype="multipart/form-data">
         {{ form_start(changePwdForm) }}
         <h1 class="h3 mt-3 mb-3 font-weight-normal">Modifiez votre mot de passe :</h1>
         <br>
