--- a/templates/claim/create.html.twig
+++ b/templates/claim/create.html.twig
@@ -8,13 +8,8 @@
 <!-- Claim Controller banner -->
 {{ include('claim/banner.html.twig') }}
 
-<!-- Getion de l'affichage d'une éventuelle erreur -->
-{% for flashError in app.flashes('error') %}
-    <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-{% endfor %}
-{% for flash in app.flashes('information') %}
-    <div class="alert alert-success" role="alert">{{ flash }}</div>
-{% endfor %}
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('flash.html.twig') }}
 
 {#<!-- <section id="regions_json" hidden>{{ JSgetregions() }}</section> -->#}
 {#<!-- <section id="dpts_json" hidden>{{ JSgetdpts() }}</section> -->#}
@@ -25,7 +20,6 @@
 <div class="paragraph--large" method="post">
 
     <h1 class="title--h2">Précisez votre besoin : <small class="small-title-message">(* champs obligatoire)</small></h1>
-    <!-- <h1 class="title--h2">Compléter votre Profil : <small class="small-title-message">(* champs obligatoire)</small></h1> -->
     <div class="card--3D-vertical px-4">
         {{ form_start(claimForm,{attr:{novalidate:"novalidate"}}) }}
 {# PAS INDISPENSABLE 
@@ -60,9 +54,9 @@
                         required
                     >
                     <select class="form-control cities" id="inputcities"
-                    name="cities" title="cities"
+                        name="cities" title="cities"
                     >
-                        <option value="Select your city">Sélectionnez votre commune</option>
+                        <option value="">-- Sélectionnez votre commune --</option>
                     </select>
                     {% if error_customer_city %}
                     <span class="d-block">
@@ -171,10 +165,9 @@
                 <!-- FIN buttons sélection filtre Region/Dept. -->
 
                 <!-- Block Tableau des Flatrates (Forfaits) -->
-                <section><!-- class="paragraph--large" id="section--presentation"-->
-                    <!-- <h2 class="title--h2" id="flatrates--title">Les tarifs...</h2> -->
+                <section>
                     {% if flatrates %}
-                    <table class="table table-striped table--txtlight">
+                    <table class="table table-striped">
                         <thead class="thead--light">
                             <tr class="row--flatrate TOUTES" id="head--flatrate">
                                 <th style="width:20%;">Choisir</th>
@@ -286,7 +279,7 @@
                                     <select class="form-control cities" id="claim_form_from_cities"
                                         name="cities" title="cities"
                                     >
-                                        <option value="Select your city">Sélectionnez votre commune</option>
+                                        <option value="">-- Sélectionnez votre commune --</option>
                                     </select>
                                     {{ form_errors(claimForm.from_city) }}
                                     {{ form_help(claimForm.from_city) }}
@@ -350,7 +343,7 @@
                                 <select class="form-control cities" id="claim_form_to_cities"
                                     name="cities" title="cities"
                                 >
-                                    <option value="Select your city">Sélectionnez votre commune</option>
+                                    <option value="">-- Sélectionnez votre commune --</option>
                                 </select>
                                 {{ form_errors(claimForm.to_city) }}
                                 {{ form_help(claimForm.to_city) }}
@@ -381,7 +374,7 @@
             <button class="btn btn-sm btn--blue" type="submit">
                 <i class="ri-send-plane-line"></i>&ensp;Envoyer la demande
             </button>
-            <a class="btn btn-sm btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
+            <a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">
                 <i class="ri-close-fill"></i>&ensp;Annuler
             </a>
         </div>
