--- a/templates/driver/card.html.twig
+++ b/templates/driver/card.html.twig
@@ -25,23 +25,24 @@
                             {% endif %}
                         </div>
                         <!-- indication du nombre de courses effectuées par l'Annuaire -->
-                        <div class="d-flex flex-row">
-                            <b>Courses :</b>
+                        <div class="d-flex flex-row flax-wrap">
+                            <b> Courses :</b>
                             &ensp;
                             {% if obDriver.isverified %}
-                            A développer (total Driver)
+                            x (total Driver)
                             {% else %}
-                            A développer (total Driver)
+                            x (total Driver)
                             {% endif %}
                         </div>
                         <!-- indication de la moyenne des notes reçues par les Customers -->
                         <div><b>Notation :</b></div>
-                        <div class="d-flex flex-row justify-content-start">
+                        <div class="row--stars">
+                            <!-- class="d-flex flex-row justify-content-start" -->
                             <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                             <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                             <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
                             <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
-                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_0.png') }}" alt="Etoile notation">
                         </div>
                     </div>
                 </div>
