--- a/templates/flatrate/read.html.twig
+++ b/templates/flatrate/read.html.twig
@@ -8,15 +8,19 @@
 <!-- Admin Controller banner -->
 {{ include('admin/banner.html.twig') }}
 
-<section class="paragraph--large" id="section--presentation">
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('flash.html.twig') }}
+
+
+<section class="paragraph--large">
     <div class="d-flex flex-row flex-wrap justify-content-between">
-        <h2 class="title--h2" id="flatrates--title">Les tarifs...</h2>
-        <a class="btn btn-sm btn--green" href="{{ path('flatrate_create') }}">
+        <h2 class="title--h2">Les tarifs...</h2>
+        <a class="btn btn-sm btn--green" href="{{ path('admin_flatrate_create') }}">
             <i class="ri-add-circle-line"></i>&ensp;Ajouter un nouveau tarif
         </a>
     </div>
     {% if flatrates %}
-    <table class="table table-striped table--txtlight">
+    <table class="table table-striped">
         <thead class="thead--dark">
             <tr>
                 <th style="width:5%;"></th>
@@ -65,7 +69,7 @@
                     </div>
                 </td>
                 <td class="d-flex flex-row">
-                    <a class="btn btn-sm btn--blue" href="{{ path('flatrate_update', {'flatrate': flatrate.id}) }}" title="Modifier" class="mr-2">
+                    <a class="btn btn-sm btn--blue" href="{{ path('admin_flatrate_update', {'flatrate': flatrate.id}) }}" title="Modifier" class="mr-2">
                         <i class="ri-edit-2-line"></i>&ensp;Modifier
                     </a>
                     &emsp;
