--- a/templates/mailer/tender.html
+++ b/templates/mailer/tender.html
@@ -24,18 +24,17 @@
 
     <div style="margin:5em;">
         <h2>Devis n°{{ tender_number }},<br>
-            du {{ tender_datetime }}
+            Réservation du {{ tender_datetime }}
         </h2>
     </div>
 
-    <h3>Date de la course :</h3>
-    <div style="padding-left:2em;">{{ claim_journeydate }}</div>
     <h3>Lieu de prise en charge :</h3>
-    <div style="padding-left:2em;">{{ claim_fromroad~', '~claim_fromzip~' '~claim_fromcity }}</div>
-    <h3>Heure de rendez-vous :</h3>
-    <div style="padding-left:2em;">{{ tender_rdvattime }}</div>
+    <div style="padding-left:2em;" style="display:flex;flex-direction:row;"><b>le : </b>{{ claim_journeydate }}</div>
+    <div style="padding-left:2em;" style="display:flex;flex-direction:row;"><b>à : </b>{{ tender_rdvattime }}</div>
+    <div style="padding-left:2em;"><b>au : </b>{{ claim_fromroad~', '~claim_fromzip~' '~claim_fromcity }}</div>
     <h3>Destination :</h3>
     <div style="padding-left:2em;">{{ claim_toroad~', '~claim_tozip~' '~claim_tocity }}</div>
+    <div style="padding-left:2em;" style="display:flex;flex-direction:row;"><b>pour une arrivée à : </b>{{ claim_arrivalattime }}</div>
     <h3>Tarif de la course :</h3>
     <div style="padding-left:2em;">{{ tender_price }}</div>
 
