--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Enregistrement{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('flash.html.twig') }}
 
     
 <form class="container-fluid mt-5 w-75" method="post"> 
@@ -25,7 +25,7 @@
             <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
                 Vous avez déjà un compte ?
                 &ensp;
-                <a class="btn btn-bg btn--secondary" href="{{ path('app_login') }}">
+                <a class="btn btn-sm btn--secondary" href="{{ path('app_login') }}">
                     <i class="ri-login-box-line"></i>&ensp;Se connecter
                 </a>
             </div>
