--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,20 +3,16 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
 
-    {% if app.user %}
-        <div class="p-3 mb-2 bg-success text-white">
-            Vous êtes connecté en tant que ' {{ app.user.firstname }} {{ app.user.lastname }} ',
-            avec l'adresse électronique ' {{ app.user.username }} '. <a href="{{ path('app_logout') }}" class="text-danger">- Logout -</a>
-        </div>
-    {% endif %}
+<!-- Zone d'affichage des messages "FLASH" venant du Controller -->
+{{ include('flash.html.twig') }}
+
+{% if app.user %}
+    <div class="p-3 mb-2 bg-success text-white">
+        Vous êtes connecté en tant que ' {{ app.user.firstname }} {{ app.user.lastname }} ',
+        avec l'adresse électronique ' {{ app.user.username }} '. <a href="{{ path('app_logout') }}" class="text-danger">- Logout -</a>
+    </div>
+{% endif %}
 
 <form class="container-fluid mt-5 w-75" method="post">
     <div class="card--3D-vertical">
@@ -57,7 +53,7 @@
             </div>
         #}
         
-        <div class="d-flex justify-content-between w-100">
+        <div class="d-flex justify-content-around mb-3 w-100">
             <button class="btn btn-sm btn--blue" type="submit">
             <!-- <button class="btn btn-lg btn-primary" type="submit"> -->
                 <i class="ri-login-box-line"></i>&ensp;Se connecter
@@ -66,7 +62,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 Pas encore de compte ?
                 &ensp;
-                <a class="btn btn-bg btn--secondary" href="{{ path('registration_user') }}">
+                <a class="btn btn-sm btn--secondary" href="{{ path('registration_user') }}">
                     <i class="ri-record-circle-line"></i>&ensp;Créer un compte
                 </a>
             </div>
